# potato-mesh

./: .codecov.yml  .dockerignore  .env-profile1  .env.example  .gitignore  ACCEPTANCE.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE  PROMETHEUS.md  README.md  SPEC.md  configure.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.raspberry-pi.yml  docker-compose.yml  flake.nix  package.json  sonar-project.properties
.claude/: settings.json
.github/: dependabot.yml
app/: .gitignore  README.md  analysis_options.yaml  debug.sh  pubspec.yaml  release.sh
data/: .gitignore  Dockerfile  __init__.py  config.sh  ingestors.sql  instances.sql  mesh.py  mesh.sh  messages.sql  neighbors.sql  nodes.py  nodes.sh  nodes.sql  positions.sql  potato_mesh_env.sh  requirements.txt  telemetry.sql  traces.sql
docs/: DOCKER.md
matrix/: .gitignore  Cargo.toml  Config.toml  Dockerfile  README.md  docker-entrypoint.sh
matrix/src/: cli.rs  config.rs  main.rs  matrix.rs  matrix_server.rs  potatomesh.rs  preset.rs
matrix/tests/: integration_tests.rs
scripts/: check-license-headers.sh
test/: debug.py  mesh.db  messages.json  nodes.json  test.sh  test_nodes_serialization.py  test_web_app.py
tests/: cypher.rb  debug.py  dump.py  instances.json  mesh.db  meshtastic_protobuf_stub.py  messages.json  neighbors.json  nodes.json  positions.json  rainbow.csv  rainbow.json  rainbow.rb  telemetry.json  test_capture_udp_fixtures_unit.py  test_channels_unit.py  test_config_unit.py  test_connection_scan_unit.py  test_connection_unit.py  test_daemon_unit.py  test_decode_payload.py  test_events_unit.py  test_handlers_unit.py  test_helpers.py  test_ingestors_unit.py  test_interfaces_unit.py  test_mesh.py  (+11 more)
(+527 files in other folders)
